fix issue with details question view height.Again

--- a/StackQA/Main.storyboard
+++ b/StackQA/Main.storyboard
@@ -125,21 +125,21 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fvG-4z-TZV">
-                                        <rect key="frame" x="-8" y="-64" width="600" height="600"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="24y-Tb-Rwe">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="24y-Tb-Rwe">
                                                 <rect key="frame" x="342" y="8" width="250" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dof-xd-zbV">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dof-xd-zbV">
                                                 <rect key="frame" x="19" y="84" width="330" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sWv-HT-xfO">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sWv-HT-xfO">
                                                 <rect key="frame" x="19" y="46" width="584" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -148,35 +148,30 @@
                                             <webView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u1a-lL-WR9">
                                                 <rect key="frame" x="19" y="113" width="573" height="91"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="91" id="oo2-7Z-jGG"/>
-                                                </constraints>
                                             </webView>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="24y-Tb-Rwe" secondAttribute="trailing" constant="8" id="2Jd-8f-ibD"/>
-                                            <constraint firstAttribute="trailing" secondItem="u1a-lL-WR9" secondAttribute="trailing" constant="8" id="2e0-Cr-pPs"/>
-                                            <constraint firstItem="Dof-xd-zbV" firstAttribute="leading" secondItem="fvG-4z-TZV" secondAttribute="leading" constant="19" id="4iW-bH-j9k"/>
-                                            <constraint firstItem="sWv-HT-xfO" firstAttribute="top" secondItem="24y-Tb-Rwe" secondAttribute="bottom" constant="17" id="BAm-gO-iIn"/>
-                                            <constraint firstAttribute="bottom" secondItem="u1a-lL-WR9" secondAttribute="bottom" constant="60" id="OGx-wH-Hxq"/>
-                                            <constraint firstItem="sWv-HT-xfO" firstAttribute="top" secondItem="24y-Tb-Rwe" secondAttribute="bottom" constant="17" id="Tov-Zk-7Xa"/>
-                                            <constraint firstItem="sWv-HT-xfO" firstAttribute="leading" secondItem="fvG-4z-TZV" secondAttribute="leading" constant="19" id="Wge-is-24S"/>
-                                            <constraint firstItem="24y-Tb-Rwe" firstAttribute="top" secondItem="fvG-4z-TZV" secondAttribute="top" constant="8" id="Z9C-bC-YHb"/>
-                                            <constraint firstItem="u1a-lL-WR9" firstAttribute="top" secondItem="Dof-xd-zbV" secondAttribute="bottom" constant="8" id="ej9-Sr-3UZ"/>
-                                            <constraint firstItem="Dof-xd-zbV" firstAttribute="top" secondItem="sWv-HT-xfO" secondAttribute="bottom" constant="17" id="qP7-du-otk"/>
-                                            <constraint firstItem="u1a-lL-WR9" firstAttribute="leading" secondItem="fvG-4z-TZV" secondAttribute="leading" constant="19" id="spA-Mt-0Pb"/>
-                                            <constraint firstItem="Dof-xd-zbV" firstAttribute="top" secondItem="sWv-HT-xfO" secondAttribute="bottom" constant="17" id="wYZ-Jf-tbR"/>
+                                            <constraint firstItem="24y-Tb-Rwe" firstAttribute="top" secondItem="fvG-4z-TZV" secondAttribute="top" constant="8" id="0A3-82-7DE"/>
+                                            <constraint firstItem="sWv-HT-xfO" firstAttribute="leading" secondItem="fvG-4z-TZV" secondAttribute="leading" constant="19" id="5RW-Ov-46M"/>
+                                            <constraint firstAttribute="bottom" secondItem="u1a-lL-WR9" secondAttribute="bottom" constant="60" id="B5d-Jz-SwU"/>
+                                            <constraint firstItem="Dof-xd-zbV" firstAttribute="leading" secondItem="fvG-4z-TZV" secondAttribute="leading" constant="19" id="Bdd-X6-Nie"/>
+                                            <constraint firstItem="sWv-HT-xfO" firstAttribute="top" secondItem="24y-Tb-Rwe" secondAttribute="bottom" constant="17" id="Kit-af-KJf"/>
+                                            <constraint firstItem="u1a-lL-WR9" firstAttribute="leading" secondItem="fvG-4z-TZV" secondAttribute="leading" constant="19" id="LKh-mB-awD"/>
+                                            <constraint firstAttribute="trailing" secondItem="24y-Tb-Rwe" secondAttribute="trailing" constant="8" id="Szq-1K-0vo"/>
+                                            <constraint firstItem="Dof-xd-zbV" firstAttribute="top" secondItem="sWv-HT-xfO" secondAttribute="bottom" constant="17" id="Tri-3W-Kvv"/>
+                                            <constraint firstItem="u1a-lL-WR9" firstAttribute="top" secondItem="Dof-xd-zbV" secondAttribute="bottom" constant="8" id="mfk-cc-Rvv"/>
+                                            <constraint firstAttribute="trailing" secondItem="u1a-lL-WR9" secondAttribute="trailing" constant="8" id="oYG-ZZ-fby"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="fvG-4z-TZV" secondAttribute="width" id="DvU-oX-DeK"/>
-                                    <constraint firstItem="fvG-4z-TZV" firstAttribute="leading" secondItem="8XB-m5-DFp" secondAttribute="leading" id="HU3-87-Dxe"/>
-                                    <constraint firstItem="fvG-4z-TZV" firstAttribute="top" secondItem="8XB-m5-DFp" secondAttribute="top" id="X0x-LE-YDd"/>
-                                    <constraint firstAttribute="height" secondItem="fvG-4z-TZV" secondAttribute="height" id="fpr-gr-8Hi"/>
-                                    <constraint firstAttribute="trailing" secondItem="fvG-4z-TZV" secondAttribute="trailing" id="m5G-c3-iqG"/>
-                                    <constraint firstAttribute="bottom" secondItem="fvG-4z-TZV" secondAttribute="bottom" id="mgt-jf-JAx"/>
+                                    <constraint firstItem="fvG-4z-TZV" firstAttribute="width" secondItem="8XB-m5-DFp" secondAttribute="width" id="4yi-v3-3Xy"/>
+                                    <constraint firstItem="fvG-4z-TZV" firstAttribute="height" secondItem="8XB-m5-DFp" secondAttribute="height" id="6dI-jL-dh0"/>
+                                    <constraint firstItem="fvG-4z-TZV" firstAttribute="leading" secondItem="8XB-m5-DFp" secondAttribute="leading" id="PIo-gH-lqY"/>
+                                    <constraint firstItem="fvG-4z-TZV" firstAttribute="top" secondItem="8XB-m5-DFp" secondAttribute="top" id="c5B-Uo-ai3"/>
+                                    <constraint firstAttribute="trailing" secondItem="fvG-4z-TZV" secondAttribute="trailing" id="gi2-MS-YbI"/>
+                                    <constraint firstAttribute="bottom" secondItem="fvG-4z-TZV" secondAttribute="bottom" id="icA-b5-HT3"/>
                                 </constraints>
                             </scrollView>
                             <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cPS-IS-TKD">
@@ -246,6 +241,7 @@
                         <outlet property="questionDate" destination="24y-Tb-Rwe" id="QpL-DM-51s"/>
                         <outlet property="questionTitle" destination="sWv-HT-xfO" id="xKR-4h-gpd"/>
                         <outlet property="scrollView" destination="8XB-m5-DFp" id="GbP-kP-txq"/>
+                        <outlet property="viewAndScrollViewHeight" destination="6dI-jL-dh0" id="IUc-4A-LAK"/>
                         <outlet property="webView" destination="u1a-lL-WR9" id="p1b-vv-NIe"/>
                     </connections>
                 </viewController>
